# gemma-4-mlx

./: .dockerignore  .gitignore  CLAUDE.md  HANDOFF-2026-05-13T034855Z.md  Makefile  README.md  bench_openai.py  go.mod  go.sum  nginx.conf  pyproject.toml  start_proxy_container.sh  start_vllm_metal.sh  status_vllm_metal.sh  stop_proxy_container.sh  stop_vllm_metal.sh  use_gemma4.sh  use_qwen36.sh
bench/: __init__.py  harness.py  pyproject.toml
cmd/forge/: main.go
cmd/forge/cmd/: boot.go  profiles.go  root.go  status.go  stop.go  swap.go
cmd/tailer/: main.go
deploy/launchd/: README.md  com.gemma4.forge.plist  com.gemma4.nginx.plist  com.gemma4.tailer.plist
deploy/nginx/: docker-compose.yml  nginx.conf
deploy/profiles/: gemma4.toml  qwen36.toml
deploy/templates/: qwen36-nothink.jinja
internal/accesslog/: parser.go  parser_test.go
internal/engine/: engine.go  engine_test.go  status.go
internal/profile/: profile.go  profile_test.go
internal/store/: sqlite.go  sqlite_test.go
scripts/: edge_down.sh  edge_up.sh  ensure_engine.sh  launch_aider.sh  launch_bench.sh  launch_claude_code.sh  launch_opencode.sh  start_engine.sh  status_engine.sh  stop_engine.sh  use_gemma4.sh  use_qwen36.sh
