[project]
name = "gemma-4-bench"
version = "0.1.0"
description = "Synthetic bench harness for the gemma-4-mlx evaluation rig"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench"]

[project.scripts]
gemma4-bench = "bench.harness:main_sync"
