[project]
name = "gemma-4-bench"
version = "0.1.0"
description = "Synthetic bench harness for the gemma-4-mlx evaluation rig"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# pyproject.toml lives at bench/pyproject.toml. We want the wheel to ship a
# `bench` package (so `from bench.harness import main_sync` works), but
# hatchling sees the current dir as the source root. Map "." onto "bench"
# so the wheel layout matches the import path the script entry expects.
packages = ["bench"]

[tool.hatch.build.targets.wheel.sources]
"." = "bench"

[project.scripts]
gemma4-bench = "bench.harness:main_sync"
